# Micro-Swarm-v1.0

./: CMakeLists.txt  MANIFEST.md  MicroSwarmRunner.cs  README.md
.github/workflows/: deploy.yml
Workbench/: CMakeLists.txt
Workbench/src/: MainWindow.cpp  MainWindow.hpp  MicroSwarmBridge.cpp  MicroSwarmBridge.hpp  main.cpp
data/: Dump20260109.sql  sql_generator.py  users_data.sql
docs/: Forschungsbericht.md  Kommando-Referenzhandbuch.md  Micro-Swarm-v3.0.md  MycoDB_The_Architecture_of_Emergence.md  Organic Spatial Data Storage.html  Organic Spatial Data Storage.md  SQL_Dialekt_Uebersicht.md  SQL_Parser_Stress_Test.md  Studienführer für Micro-Swarm.html  Studienführer für Micro-Swarm.md  Unity_Embedding.html  Unreal_Embedding.html  Windows PowerShell.txt  chinook.html  chinook.md  chinook_testergebnisse_SQL.md  database_use.html  database_use.md  db1.txt  db2.txt  db_smoke_test_db_shell.md  db_write_test_db_shell.md  db_write_test_db_shell.txt  faq.md  workbench.md
examples/: MycoDbExample.cs
scripts/: run_new_feature_tests.ps1
src/: main.cpp  micro_swarm_api.cpp  micro_swarm_api.h
src/compute/: opencl_runtime.cpp  opencl_runtime.h
src/compute/kernels/: diffuse.cl
src/sim/: agent.cpp  agent.h  db_engine.cpp  db_engine.h  db_sql.cpp  db_sql.h  dna_memory.cpp  dna_memory.h  mycel.cpp  mycel.h  params.h  report.cpp  report.h
www/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json
www/styles/: theme.css
